# Copyright (c) 2022 FuZhou Lockzhiner Electronic Co., Ltd. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//build/lite/config/subsystem/lite_subsystem.gni")

executable("liteos.elf") {
    deps = [
        "//build/lite/config/component/cJSON:cjson_static",
        # xts
        "//device/soc/rockchip/rk2206/adapter/hals/update:hal_update_static",
        "//base/update/ota_lite/frameworks/source:hota",
        "//build/lite:ohos",
    ]

    ldflags = [
    ]
}

build_ext_component("liteos") {
    exec_path = rebase_path("//device/soc/rockchip/rk2206/sdk_liteos/image")
    outdir = rebase_path(root_out_dir)
    command = "sh $exec_path/build.sh $outdir/unstripped/bin/liteos.elf $outdir"
    
    deps = [
        ":liteos.elf",
    ]
}

group("lingpi") {
}
