import("//build/lite/config/component/lite_component.gni")
import("//build/lite/config/subsystem/lite_subsystem.gni")

executable("liteos.elf") {
    deps = [
        "//device/soc/rockchip/rk2206/adapter/hals/update:hal_update_static",
        "//build/lite/config/component/cJSON:cjson_static",
        "samples:app",
        "//build/lite:ohos",
    ]

    ldflags = [
    ]
}

build_ext_component("liteos") {
    exec_path = rebase_path("//device/soc/rockchip/rk2206/sdk_liteos/image")
    outdir = rebase_path(root_out_dir)
    command = "sh $exec_path/build.sh $outdir/unstripped/bin/liteos.elf $outdir"
    
    deps = [
        ":liteos.elf",
    ]
}

group("lockzhiner_rk2206") {
}
