# Copyright (c) 2022 FuZhou Lockzhiner Electronic Co., Ltd. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")
module_name = get_path_info(rebase_path("."), "name")
module_group(module_name) {
    modules = [ 
        # 内核类
        #"a0_hello_world",
        #"a1_kernel_task",
        #"a2_kernel_semaphore",
        #"a3_kernel_timer",
        #"a4_kernel_mutex",
        #"a5_kernel_queue",
        #"a6_kernel_event",

        # 基础外设类
        #"b1_adc",
        #"b2_nfc",
        #"b3_eeprom",
        #"b4_lcd",
        #"b5_oled",
        #"b6_uart",
        #"b7_wifi_tcp",
        #"b8_wifi_udp",
        
        # E53模块
        #"c1_e53_intelligent_agriculture",
        #"c2_e53_smart_covers",
        #"c3_e53_intelligent_street_lamp",
        #"c4_e53_intelligent_vehicle_01",
        #"c5_e53_body_induction",
        #"c6_e53_gesture_sensor",
        #"c7_e53_intelligent_smoke_sensor",
        #"c8_e53_temperature_measurement",
        #"c9_e53_heart_rate_detection",
        #"c10_e53_wisdom_gardens",
    ]
}

